--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "portfolio_website",
+  "name": "portfolio_website_second",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@react-three/drei": "^7.22.0",
     "@react-three/fiber": "^7.0.19",
     "@testing-library/jest-dom": "^5.15.0",
@@ -13,8 +19,10 @@
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
     "@types/three": "^0.134.0",
+    "change-notifier": "^1.0.1",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "sass": "^1.43.4",
